Fix demo video size on mobile

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ footer > * {
 	margin-right: auto;
 }
 
-img {
+img, video {
 	max-width: 100%;
 	height: auto;
 }
